--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/namu darbai/shopping cart/index.js" defer></script>
-    <link rel="stylesheet" href="/namu darbai/shopping cart/style.css">
+    <script src="/index.js" defer></script>
+    <link rel="stylesheet" href="/style.css">
     <title>Document</title>
 </head>
 <body>
